--- a/style.css
+++ b/style.css
@@ -1,9 +1,24 @@
-.success{
-    color: crimson;
-    border: 2px dashed crimson;
+.success {
+  color: crimson;
+  border: 2px dashed crimson;
 }
 
-.error{
-    color: yellow;
-    border: 2px yellow dashed;
+.error {
+  color: yellow;
+  border: 2px yellow dashed;
+}
+
+button {
+  background-color: green;
+  border: 1px solid #ccc;
+}
+
+ul li {
+  list-style-type: none;
+  margin: 15px auto;
+  padding: 15px 12px;
+  max-width: 250px;
+  background-color: #ccc;
+  border: 1px solid green;
+  text-align: center;
 }
